Fixes #277 create entry with image on firefox not working
Also took this opportunity to tidy all the entry and image js up. Create a new entry blade which is shared between create and edit and also a shared js utility fil which contains shared functionality.

Image rotation now woks nicely as well

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8167,7 +8167,95 @@ $color-green: #9AE14F;
   color:#0066c0;
 }
 
+#image_box_container {
+  width:250px;
+  height:250px;
+  position:relative;
+  margin:auto;
+ 
+  #image_box {
+    position:absolute;
+    top:0;
+    width:250px;
+    height:250px; 
+    background-image: url('');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin:7px;
+    margin:auto;
+    img {
+      opacity:0.5;
+    }
+  }
+}
 
+.image_controls {
+  position:absolute;
+  bottom:0;
+  right:-15px;
+  #rotate_image:hover, #delete_image:hover {
+    cursor:pointer;
+  }
+  i {
+    background-color:black;
+    float:right;
+    color:white;
+    padding:5px;
+    min-width:35px;
+    margin-right:1px;
+    .fa-2x {
+      margin-bottom:2px;
+    }
+  }
+}
+
+#entry_form, #edit_entry {
+  #image_box_container {
+  display:none;
+    background-color:#f2f2f2;
+    #image_box {
+      border: #ddd 1px solid;
+    }
+    margin-top:5px;
+    margin-bottom:10px;
+  }
+
+  #cancel_button {
+    display:none;
+  }
+
+  #progressbar {
+    margin-top:5px;
+    margin-bottom:5px;
+    text-align: center;
+    .ui-progressbar-value {
+      margin:0;
+    }
+    .percent_caption {
+      //width: 100%;
+      //float: left;
+      //line-height: 200%;
+      position:relative;
+      top:-23px;
+    }
+  }
+}
+
+#delete_img_checkbox_label {
+  display:none;
+}
+
+#dialog-confirm {
+  display:none;
+  i {
+    vertical-align: middle;
+    padding:3px;
+  }
+  span {
+    font-size:18px;
+  }
+}
 /**
  * Footer region
  * 
